--- a/03.Ops.md
+++ b/03.Ops.md
@@ -24,23 +24,36 @@ git push -u origin main
 ## 1.2. public-api yamls
 YAML's de Kubernetes de la aplicación DEMO: public-api
 
->[files](./assets/apps-files/public-api/)
 
-Folder:
+### 1.2.1. En vs-code, en el file explorer moverse a la carpeta ~/ops
+
+### 1.2.2. Crear Folder
 - public-api
 
-Files:
-- namespace
-- config map
-- deploy (image name and version)
-- registry access:
+### 1.2.3. Crear los siguientes archivos con el contenido de los yamls:
+
+>[files](./assets/apps-files/public-api/)
+
+- ns.yaml
+- cm.yaml
+- deploy.yaml (cambiar: image name and version)
+
+### 1.2.4. Crear ns public-stage y config map
+```
+kubectl apply -f ns.yaml
+kubectl apply -f cm.yaml
+```
+### 1.2.5. moverse al ns public-stage
+```
+kubectl config set-context --current --namespace=public-stage
+```
+
+### 1.2.6. Crear el acceso al registry privado:
 
 > [pull private image](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
 
 ```vim
-# crear ns public-stage y moverse
-kubectl apply -f ns.yaml
-kubectl config set-context --current --namespace=public-stage
+
 
 # docker login
 # Como la imagen es privada en Docker Hub, es necesario crear un secret con las credenciales.
