--- a/01.Github.md
+++ b/01.Github.md
@@ -82,7 +82,7 @@ docker login
 ```vim
 source .env.qa
 echo $APP_ENV_KUBE_API
-export REGISTRY=cachac
+export REGISTRY=<DOCKER REGISTRY>
 
 docker build . -t $REGISTRY/kubelabs_publicapi:1.0.0 --build-arg APP_ENV="$APP_ENV_KUBE_API"
 
