--- a/04.Kustomize.md
+++ b/04.Kustomize.md
@@ -24,15 +24,19 @@ sudo snap install kustomize
 
 kustomize version
 ```
-# 3. GitHub Deploy Project folder structure
+# 3. GitHub OPS Project folder structure
 public-api/
 - base
 - overlays
 - - stage
 - - production
 
-# 4. Create Kustomize STAGE yaml files
+# 4. Crear los archivos Kustomize BASE + STAGE
 > [app kustomize](./assets/kustomize/)
+
+##
+
+
 
 
 
