--- a/03.Ops.md
+++ b/03.Ops.md
@@ -52,10 +52,11 @@ kubectl config set-context --current --namespace=public-stage
 
 > [pull private image](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
 
+> [Secret Types](https://kubernetes.io/docs/concepts/configuration/secret/#secret-types)
 ```vim
+# revisar la ruta donde se instalan las credenciales de Docker
+docker login
 
-
-# docker login
 # Como la imagen es privada en Docker Hub, es necesario crear un secret con las credenciales.
 export DOCKER_PATH=<path/to/.docker/config.json>
 
@@ -72,25 +73,17 @@ kubectl get secret regcred
 imagePullSecrets:
 - name: regcred
 ```
-- svc
+### 1.2.7. Crear y ejecutar el deploy.yaml
+### 1.2.8. Crear y ejecutar el svc.yaml
+### 1.2.9. Crear y ejecutar el ing.yaml
 
 - ingress: (change USERLAB)
-- Check ingressClass
 
-> [Private Image](https://kubernetes.io/docs/tasks/configure-pod-container/pull-image-private-registry/)
-> [Secret Types](https://kubernetes.io/docs/concepts/configuration/secret/#secret-types)
+## 1.3. Check deploy, pods, service & ingress
+> check ingress address
 
-## 1.3. apply yamls
-
-## 1.4. check ingress
+## 1.4. Optional. Minikube external-ip
 ```vim
-kubectl get ing
-# check address
-```
-
-## 1.5. Optional. Minikube external-ip
-```vim
-newgrp docker
 minikube addons list
 minikube ip
 
