--- a/04.Kustomize.md
+++ b/04.Kustomize.md
@@ -34,10 +34,89 @@ public-api/
 # 4. Crear los archivos Kustomize BASE + STAGE
 > [app kustomize](./assets/kustomize/)
 
-##
+## 4.1. BASE - kustomization.yaml
+```yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 
+resources:
+  - cm.yaml
+```
+## 4.2. BASE - cm.yaml
+```yaml
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: cm-private-api
+  # namespace: public  >>>   SE ELIMINA !!
+data:
+	# SE CREA UNA "VARIABLE PARA REMPLAZARLA EN EL AMBIENTE CORRECTO"
+  PRIVATE_API: PRIVATE_API_URL
+```
+## 4.3. STAGE - ns.yaml
+```yaml
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: public-stage
+```
+## 4.4. PRODUCTION - ns.yaml
+```yaml
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: public  # PRODUCTION !!!
+```
+## 4.5. STAGE - kustomization.yaml
+```yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 
+namespace: public-stage
 
+commonLabels:
+  app: public-api
+  team: devops
+
+commonAnnotations:
+  note: "Este es el ambiente de STAGE"
+
+resources:
+- ns.yaml
+- ../../base
+
+patches:
+- target:
+    kind: ConfigMap
+    name: cm-private-api
+  path: cm-patch.yaml
+```
+## 4.6. STAGE - cm-patch.yaml
+```yaml
+- op: replace
+  path: /data/PRIVATE_API
+  value: private-stage-demo
+```
+## 4.7. Construir los recursos usando Kustomize para el ambiente STAGE:
+```
+kustomize build overlays/stage
+```
+
+## 4.8. BASE - deploy - ingress - service - secret
+```yaml
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
+
+resources:
+  - cm.yaml
+  - secret.yaml
+  - svc.yaml
+  - ing.yaml
+  - deploy.yaml
+```
+
+## 4.9. STAGE kustomization.yaml completo
+> [kustomization](./assets/kustomize/public-api/overlays/stage/kustomization.yaml)
 
 
 # 5. Build
