--- a/04.Kustomize.md
+++ b/04.Kustomize.md
@@ -114,6 +114,18 @@ resources:
   - ing.yaml
   - deploy.yaml
 ```
+- Crear los archivos yaml del BASE con siguiente contenido:
+> [BASE completo](./assets/kustomize/public-api/base/)
+
+### 4.8.1. crear el secret.yaml
+```
+export DOCKER_PATH=/home/kube/.docker/config.json
+
+kubectl create secret generic regcred \
+    --from-file=.dockerconfigjson=$DOCKER_PATH \
+    --type=kubernetes.io/dockerconfigjson \
+    -n public-stage --dry-run=client -o yaml
+```
 
 ## 4.9. STAGE kustomization.yaml completo
 > [kustomization](./assets/kustomize/public-api/overlays/stage/kustomization.yaml)
