--- a/03.Ops.md
+++ b/03.Ops.md
@@ -82,27 +82,32 @@ imagePullSecrets:
 ## 1.3. Check deploy, pods, service & ingress
 > check ingress address
 
-## 1.4. Optional. Minikube external-ip
+## 1.4. Test.
 ```vim
 minikube addons list
 minikube ip
 
-
-# opcionales
-echo "$(minikube ip)  LABUSER.kubelabs.dev" | sudo tee -a /etc/hosts
-
 minikube addons enable ingress
 minikube addons enable ingress-dns
 
+echo "$(minikube ip)  api-stage.<DOMAIN>" | sudo tee -a /etc/hosts
+
+echo "$(minikube ip)  api.<DOMAIN>" | sudo tee -a /etc/hosts
+```
+
+# 2. Test URL api
+- curl http://api-stage.<DOMAIN>/healthcheck
+- curl http://api-stage.<DOMAIN>/random_crash
+
+# 3. Opcional, habilitar MetalLB
+```
 minikube addons enable metallb
 
 -- Enter Load Balancer Start IP: 192.168.99.105
 -- Enter Load Balancer End IP: 192.168.99.120
 
 minikube tunnel
-minikube service svc-public-api -n public-stage --url
+
+# use node port
+minikube service public-api -n public-stage --url
 ```
-# 2. test URL api
-- /healthcheck
-- /random_crash
-- curl http://api.cachac.kubelabs.<TLD>
