--- a/04.Kustomize.md
+++ b/04.Kustomize.md
@@ -95,7 +95,7 @@ patches:
 ```yaml
 - op: replace
   path: /data/PRIVATE_API
-  value: private-stage-demo
+  value: PROD_ENDPOINT
 ```
 ## 4.7. Construir los recursos usando Kustomize para el ambiente STAGE:
 ```
