--- a/04.Kustomize.md
+++ b/04.Kustomize.md
@@ -145,7 +145,7 @@ kubectl apply -k overlays/stage
 
 # 7. Check
 ```vim
- curl  http://api.<NAME>.kubelabs2.tk/
+curl  http://api-stage.<DOMAIN>/random_crash
 ```
 
 
