--- a/05.Kustomize Practice.md
+++ b/05.Kustomize Practice.md
@@ -13,7 +13,7 @@
 - resource: ns - base
 - Patches: File patch or in-line patch
 
-## 2.1. build
+## 2.1. build and export to "prodtest.yaml"
 ```vim
 kustomize  build  overlay/production > prodtest.yaml
 ```
