--- a/05.Kustomize Practice.md
+++ b/05.Kustomize Practice.md
@@ -3,7 +3,7 @@
 - namespace: public
 - 5 replicas
 - Config map: PRIVATE_API:  PROD_ENDPOINT
-- Ingress patch: api.USERLAB.kubelabs.dev
+- Ingress patch: api.<DOMAIN>
 # 1. Create production folder
 - /overlays/production
 
