--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -68,7 +68,7 @@ brew install argocd
 
 ## 3.2. cli login
 ```vim
-argocd login <IP>:30088  --insecure --grpc-web --username admin --password xxxxx
+argocd login <IP>:30088  --insecure --grpc-web --username admin --password <ADMIN_PASSWORD>
 
 ó
 argocd login --port-forward
