--- a/08.Actions.md
+++ b/08.Actions.md
@@ -56,7 +56,7 @@ env:
 on:
 ...
 	- name: print-secret
-	run: echo "Secret value:   ${{ secrets.SECRET_NAME }}"
+	run: echo "Secret value ${{ secrets.SECRET_NAME }}"
 ```
 ## 1.5. Expressions
 >[expressions](https://docs.github.com/en/actions/learn-github-actions/expressions)
