--- a/08.Actions.md
+++ b/08.Actions.md
@@ -95,7 +95,7 @@ on:
 
 env:
   REGISTRY: cachac
-  IMAGE_NAME: kubelabs_publicapitemp
+  IMAGE_NAME: kubelabs_publicapi
   OPS_BRANCH: main
   OPS_REPO: cachac/ops
 
@@ -170,14 +170,14 @@ tags: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ env.RELEASE_VERSION }}
 
 ## 5.2. New git tag and push to stage branch
 ```vim
-git tag -m "docker tag version" -a v1.0
+git tag -m "docker tag version" -a 1.0.1
 
 git add .
 git commit -m "git hub workflow - tag version"
 git push origin stage  --tags
 
 # If only push a specific tag:
-# git push origin stage v1.0
+# git push origin stage 1.0.1
 ```
 ## 5.3. Docker Hub: Check new tag
 
