--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -41,7 +41,7 @@ spec:
   type: NodePort
 
 ```
-## 2.2. Option 2. Port-forward
+## 2.2. Option 2. Port-forward (local cluster)
 ```vim
 kubectl -n argocd port-forward $(kubectl -n argocd get pod -l app.kubernetes.io/name=argocd-server -o jsonpath='{.items[0].metadata.name}') 8080:8080
 
@@ -70,7 +70,8 @@ brew install argocd
 ```vim
 argocd login <IP>:30088  --insecure --grpc-web --username admin --password <ADMIN_PASSWORD>
 
-ó
+
+# Opcion port forward
 argocd login --port-forward
 ```
 ### 3.2.1. test cli
@@ -82,8 +83,9 @@ argocd app list
 - Settings - Repositories
 - Connect Repo Using SSH (Git "OPS" repo)
 - Name: ops
+- Project: default
 - github ssh url (ej: git@github.com:<user>/<project>.git)
-- private id_rsa key
+- private id_rsa key: cat ~/.ssh/id_rsa
 
 
 
@@ -93,7 +95,9 @@ argocd app list
 ## 5.1. Option 1: UI
 - Applications - Create Application
 - Name: stage-public-api
-- sync automated, prune true, selfHeal: true
+- sync automated,
+- prune true
+- selfHeal: true
 - auto-create namespace
 - Repository URL: ej, git@github.com:cachac/ops.git
 - path: public-api/overlays/stage/
@@ -101,7 +105,7 @@ argocd app list
 - namespace: public-stage
 
 
-> Kustomize image:version autodetect
+> Kustomize image:version autodetect !!!
 
 ## 5.2. View yaml and copy
 Paste: ops/argo-apps/public-api-stage.yaml
@@ -118,7 +122,7 @@ Paste: ops/argo-apps/public-api-stage.yaml
 
 ## 5.4. Manual scale
 ```vim
-kubectl scale --replicas 3 deploy public-api  -n public-stage
+kubectl scale --replicas 1 deploy public-api  -n public-stage
 ```
 > ArgoCD SYNC (self heal)
 
@@ -144,6 +148,7 @@ argocd app sync stage-public-api
 ## 5.8. Check Pods: Running 2 replicas
 
 > wait 3 min to auto-sync
+
 > argocd app sync <APP_NAME>
 
 
@@ -162,17 +167,17 @@ EJ:
 argocd app create kustomize-gitops-example \
 --project default \
 --repo https://github.com/cachac/gitops-certification-examples \
---path "./kustomize-app/overlays/staging" \Miercoles
+--path "./kustomize-app/overlays/staging"
 ```
 > FATA[0001] Argo CD server address unspecified
 
-# 6. App of Apps pattern
+# 6. Optional. App of Apps pattern
 > [public-api YAML](./assets/apps-files/../argo/apps/stage-public-api.yaml)
 - new folder in OPS repo: /argo-apps
 
-## 6.1. add kubernetes yaml to /argo-apps
+## 6.1. add stage-public-api.yaml to /argo-apps
 ## 6.2. Commit & Push to Github
-## 6.3. Delete stage app
+## 6.3. Delete stage-public-api Argo application
 ## 6.4. Create new app: argo-apps
 - name: argo-apps
 - project: default
@@ -190,6 +195,8 @@ argocd app create kustomize-gitops-example \
 ## 6.6. Create app
 - check auto-create and sync public-api-stage Application
 - check kubernetes resources
+
+
 # 7. Optional. Expose Argo via Ingress
 > [yaml](./assets/argo/ingress.yaml)
 > [GKE load balancer](https://argo-cd.readthedocs.io/en/latest/operator-manual/ingress/#google-cloud-load-balancers-with-kubernetes-ingress)
@@ -238,4 +245,3 @@ admin.enabled: "false"
 ```
 
 ## 8.5. Logout and login new user
-
