--- a/08.Actions.md
+++ b/08.Actions.md
@@ -97,7 +97,7 @@ env:
   REGISTRY: cachac
   IMAGE_NAME: kubelabs_publicapi
   OPS_BRANCH: main
-  OPS_REPO: cachac/ops
+  OPS_REPO: Storylabs-Learning/ops
 
 jobs:
 
@@ -185,14 +185,14 @@ git push origin stage  --tags
 
 # 6. CD: Deploy to Kubernetes
 ## 6.1. output version from Build Job
-Update Step "Show new tag"
+Update Step "New Tag Version"
 ```yaml
-      - name: Show new tag
+      - name: New Tag Version
         id: tagVersion
         run: |
           echo ${{ env.RELEASE_VERSION }}
 
-					# Crea una variable tipo output para ser utilizada en otro JOB
+          # Crea una variable tipo output para ser utilizada en otro JOB
           echo "RELEASE_VERSION=${{ env.RELEASE_VERSION }}" >> $GITHUB_OUTPUT
 ```
 Set an build Job Output
@@ -200,7 +200,7 @@ Set an build Job Output
   build:
     runs-on: ubuntu-latest
 
-		# exporta las variables tipo output al resto de JOBS del pipeline
+    # exporta las variables tipo output al resto de JOBS del pipeline
     outputs:
       RELEASE_VERSION: ${{ steps.tagVersion.outputs.RELEASE_VERSION }}
 ```
@@ -216,11 +216,13 @@ Es necesaria una llave de acceso para la cuenta de OPS
 
 > Repo permissions
 
-## 6.3. Add new Secret in Application Repo
-Descarga el código del repo OPS en el pipeline para hacer el cambio de versión de la imagen de Kubernetes.
+## 6.3. Add new Secret in DEV Repo
 
 > OPS_TOKEN = ssh-private key or PAT
+
 ## 6.4. New Job: deploy
+Descarga el código del repo OPS en el pipeline para hacer el cambio de versión de la imagen de Kubernetes.
+
 ```yaml
   deploy:
     name: Deploy
@@ -232,7 +234,7 @@ Descarga el código del repo OPS en el pipeline para hacer el cambio de versión
 
     steps:
       - name: Checkout OPS code
-			  uses: actions/checkout@v3
+        uses: actions/checkout@v3
         with:
           repository: ${{ env.OPS_REPO }}
           # token: ${{ secrets.OPS_TOKEN }}
