--- a/07.ArgoCD Practice.md
+++ b/07.ArgoCD Practice.md
@@ -9,12 +9,11 @@ kubectl delete ns argocd --force --grace-period=0
 kubectl delete ns public-state --force --grace-period=0
 ```
 
-
 # 3. Install ArgoCD
 # 4. Get Admin Password & Login
-# 5. Add Git Repo (OPS)
+# 5. Add Git Repository (OPS)
 
-# 6. Create Applications: using app of apps pattern
+# 6. Create Applications:
 ## 6.1. Stage api
 ## 6.2. Production api
 
