--- a/01.Github.md
+++ b/01.Github.md
@@ -17,7 +17,8 @@ Esta cuenta se utilizará para el control de versiones de la aplicación (Dev)
 ssh-keygen -q -N "" -C "user@lab.com"
 cat ~/.ssh/id_rsa.pub
 ```
-## 1.2. Agregar la llave a la cuenta Github
+## 1.2. Agregar la llave PÚBLICA a la cuenta Github
+- Cuenta - Settings - SSH and GPG Keys
 
 ## 1.3. Crear repositorio privado: Dev
 ## 1.4. Agregar el repositorio al entorno local
@@ -36,7 +37,7 @@ git push -u origin main
 ```
 
 ## 1.5. Git branch
-El repositorio de aplicacion requiere dos Branches: State y Main (Producción)
+El repositorio de aplicacion requiere dos Branches: Stage y Main (Producción)
 
 - stage
 - main= production
