--- a/02.KubernetesCluster.md
+++ b/02.KubernetesCluster.md
@@ -11,6 +11,39 @@ sudo install minikube-linux-amd64 /usr/local/bin/minikube
 minikube start
 ```
 ## 4. MicroK8s
+```
+sudo apt update
 
+sudo iptables -P FORWARD ACCEPT
+
+sudo snap install microk8s --classic
+
+sudo microk8s status --wait-ready
+
+sudo snap install kubectl --classic
+
+sudo microk8s.enable dns dashboard storage ingress
+
+mkdir .kube
+```
+
+### Sustituir <PUBLIC_IP> con la ip pública o el url del laboratorio.
+```
+sudo microk8s kubectl config set-cluster microk8s-cluster --server=https://<PUBLIC_IP>:16443 --insecure-skip-tls-verify
+
+```
+
+### Reiniciar
+```
+sudo microk8s stop
+sudo microk8s start
+sudo microk8s config > ~/.kube/config
+
+```
+
+### Comprobar
+```
+kubectl get nodes
+```
 
 ![Cluster](./assets/img/cluster.jpeg)
