--- a/02.KubernetesCluster.md
+++ b/02.KubernetesCluster.md
@@ -27,13 +27,13 @@ sudo microk8s.enable dns dashboard storage ingress
 mkdir .kube
 ```
 
-### Sustituir <PUBLIC_IP> con la ip pública o el url del laboratorio.
+### 4.1. Sustituir <PUBLIC_IP> con la ip pública o el url del laboratorio.
 ```
 sudo microk8s kubectl config set-cluster microk8s-cluster --server=https://<PUBLIC_IP>:16443 --insecure-skip-tls-verify
 
 ```
 
-### Reiniciar
+### 4.2. Reiniciar
 ```
 sudo microk8s stop
 sudo microk8s start
@@ -41,7 +41,7 @@ sudo microk8s config > ~/.kube/config
 
 ```
 
-### Comprobar
+### 4.3. Comprobar
 ```
 kubectl get nodes
 ```
