--- a/03.Ops.md
+++ b/03.Ops.md
@@ -12,7 +12,7 @@ cd ops
 
 
 # github sync ()
-echo "# ops" >> README.md\n
+echo "# ops" >> README.md
 git init
 git add README.md
 git commit -m "first commit"
