--- a/02.KubernetesCluster.md
+++ b/02.KubernetesCluster.md
@@ -1,49 +1,17 @@
 
 # 02 Install Kubernetes Cluster <!-- omit in toc -->
 
-## 1. [GKE](./GKE.md)
-## 2. [EKS](./EKS.md)
-## 3. Minikube
+
+# 1. Minikube
 ```vim
 sudo apt update
 curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
 sudo install minikube-linux-amd64 /usr/local/bin/minikube
 minikube start
 ```
-## 4. MicroK8s
-```
-sudo apt update
-
-sudo iptables -P FORWARD ACCEPT
-
-sudo snap install microk8s --classic
-
-sudo microk8s status --wait-ready
-
-sudo snap install kubectl --classic
-
-sudo microk8s.enable dns dashboard storage ingress
-
-mkdir .kube
-```
-
-### 4.1. Sustituir <PUBLIC_IP> con la ip pública o el url del laboratorio.
-```
-sudo microk8s kubectl config set-cluster microk8s-cluster --server=https://<PUBLIC_IP>:16443 --insecure-skip-tls-verify
-
-```
-
-### 4.2. Reiniciar
-```
-sudo microk8s stop
-sudo microk8s start
-sudo microk8s config > ~/.kube/config
-
-```
-
-### 4.3. Comprobar
-```
-kubectl get nodes
-```
 
 ![Cluster](./assets/img/cluster.jpeg)
+
+# 2. Otras Opciones:
+## 2.1. [GKE](./GKE.md)
+## 2.2. [EKS](./EKS.md)
