--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -3,9 +3,6 @@
 Se encarga de escuchar al repositorio OPS, que tiene los archivos YAML de kubernetes
 Cuando encuentra un cambio en la configuración, aplica esos cambios en el cluster.
 
-
-
-
 # 1. Install ArgoCD
 >[Install](https://argo-cd.readthedocs.io/en/stable/operator-manual/installation/)
 
@@ -18,9 +15,9 @@ kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/st
 kubectl config set-context --current --namespace=argocd
 kubectl get pods
 
-# Optional: HA (production)
-kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/master/manifests/ha/install.yaml
 ```
+# Optional: HA (production)
+> [link](https://argo-cd.readthedocs.io/en/stable/operator-manual/installation/#high-availability)
 
 # 2. UI Access
 ## 2.1. Option 1. NodePort
@@ -58,6 +55,7 @@ kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.pas
 ## 3.1. Install argocd cli
 ```vim
 sudo curl -sSL -o /usr/local/bin/argocd https://github.com/argoproj/argo-cd/releases/latest/download/argocd-linux-amd64
+
 
 sudo chmod +x /usr/local/bin/argocd
 
