--- a/08.Actions.md
+++ b/08.Actions.md
@@ -22,13 +22,15 @@ on:
 jobs:
   print: # job name
   # ejecuta el pipeline en una VM Ubuntu
-    runs-on: ubuntu-latest # https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners
+    runs-on: ubuntu-latest
 
     # Pasos a ejecutar
     steps:
       - name: print-to-screen
         run: echo "Hello World!"
 ```
+
+> Runners: https://docs.github.com/en/actions/using-github-hosted-runners/about-github-hosted-runners
 
 ## 1.1. git push and check actions tab
 ```git
@@ -96,8 +98,8 @@ on:
 env:
   REGISTRY: cachac
   IMAGE_NAME: kubelabs_publicapi
-  OPS_BRANCH: main
   OPS_REPO: Storylabs-Learning/ops
+  OPS_BRANCH: main
 
 jobs:
 
@@ -158,7 +160,7 @@ jobs:
       - name: Get TAG version
         run: echo "RELEASE_VERSION=$(git tag --sort=-creatordate | head -1)" >> $GITHUB_ENV
 
-      - name: New Tag Version
+      - name: Show Tag Version
         run: echo ${{ env.RELEASE_VERSION }}
 ...
 ```
