mejoras en las prácticas

--- a/03.Ops.md
+++ b/03.Ops.md
@@ -5,6 +5,8 @@
 Este repositorio contiene los archivos YAML con los recursos de Kubernetes.
 
 ## 1.1. Agregar el repositorio al entorno local
+en /home/$USER
+
 ```
 cd ..
 mkdir ops
@@ -23,7 +25,6 @@ git push -u origin main
 
 ## 1.2. public-api yamls
 YAML's de Kubernetes de la aplicación DEMO: public-api
-
 
 ### 1.2.1. En vs-code, en el file explorer moverse a la carpeta ~/ops
 
@@ -75,6 +76,9 @@ imagePullSecrets:
 ```
 ### 1.2.7. Crear y ejecutar el deploy.yaml
 ### 1.2.8. Crear y ejecutar el svc.yaml
+> Cambiar el host
+
+
 ### 1.2.9. Crear y ejecutar el ing.yaml
 
 - ingress: (change USERLAB)
@@ -82,24 +86,42 @@ imagePullSecrets:
 ## 1.3. Check deploy, pods, service & ingress
 > check ingress address
 
-## 1.4. Test.
+```
+k describe ing public-api
+```
+
+# 2. Browser Test
+> http://api-stage.LABUSER.kubelabs.dev/graphql
+
+```gql
+query {
+  User{
+    checkPublicApi
+  }
+}
+```
+
+# 3. Sincronizar los cambios con Github
+
+# 4. Opcional para probar en Minikube
 ```vim
 minikube addons list
-minikube ip
 
 minikube addons enable ingress
 minikube addons enable ingress-dns
+
+minikube ip
 
 echo "$(minikube ip)  api-stage.<DOMAIN>" | sudo tee -a /etc/hosts
 
 echo "$(minikube ip)  api.<DOMAIN>" | sudo tee -a /etc/hosts
 ```
 
-# 2. Test URL api
+## 4.1. Test URL api
 - curl http://api-stage.<DOMAIN>/healthcheck
 - curl http://api-stage.<DOMAIN>/random_crash
 
-# 3. Opcional, habilitar MetalLB
+## 4.2. Opcional, habilitar MetalLB
 ```
 minikube addons enable metallb
 
