--- a/04.Kustomize.md
+++ b/04.Kustomize.md
@@ -74,9 +74,16 @@ kind: Kustomization
 
 namespace: public-stage
 
+# deprecated
 commonLabels:
   app: public-api
   team: devops
+
+# labels:
+# - pairs:
+#     app: public-api
+#     team: devops
+#   includeSelectors: true
 
 commonAnnotations:
   note: "Este es el ambiente de STAGE"
@@ -95,7 +102,7 @@ patches:
 ```yaml
 - op: replace
   path: /data/PRIVATE_API
-  value: STAGE_ENDPOINT
+  value: STAGE_ENDPOINT # <- valor de ejemplo para ambiente staging
 ```
 ## 4.7. Construir los recursos usando Kustomize para el ambiente STAGE:
 ```
@@ -127,7 +134,7 @@ kubectl create secret generic regcred \
     -n public-stage --dry-run=client -o yaml
 ```
 
-## 4.9. STAGE kustomization.yaml completo
+## 4.9. Completar el STAGE kustomization.yaml con el siguiente contenido:
 > [kustomization](./assets/kustomize/public-api/overlays/stage/kustomization.yaml)
 
 
