--- a/05.Kustomize Practice.md
+++ b/05.Kustomize Practice.md
@@ -4,25 +4,22 @@
 - 5 replicas
 - Config map: PRIVATE_API:  PROD_ENDPOINT
 - Ingress patch: api.<DOMAIN>
-# 1. Create production folder
+# 1. Configurar en el folder: production
 - /overlays/production
 
-# 2. Create kustomization.yaml
+# 2. Crear el archivo kustomization.yaml y configurar los siguientes valores:
 - namespace
-- commonLables (optional)
-- resource: ns - base
-- Patches: File patch or in-line patch
+- commonLables (labels - pairs)
+- resources: ns - base
+- Patches: tipo File patch o in-line patch
 
-## 2.1. build and export to "prodtest.yaml"
+## 2.1. Ejecutar el kustumize build y exportarlo al archivo: "prodtest.yaml"
 ```vim
 kustomize  build  overlay/production > prodtest.yaml
 ```
 
 ## 2.2. Check prodtest.yaml file
-## 2.3. Apply
+## 2.3. Aplicar:
 ```vim
 kubectl apply -k  overlay/production
-
-# or
-k apply -f prodtest.yaml
 ```
