--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -13,7 +13,7 @@ kubectl create namespace argocd
 kubectl apply -n argocd -f https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
 
 kubectl config set-context --current --namespace=argocd
-kubectl get pods
+watch kubectl get pods
 
 ```
 # Optional: HA (production)
@@ -21,6 +21,7 @@ kubectl get pods
 
 # 2. UI Access
 ## 2.1. Option 1. NodePort
+file: nodeport.yaml
 ```yaml
 apiVersion: v1
 kind: Service
@@ -31,13 +32,20 @@ spec:
   ports:
   - protocol: TCP
     port: 8080
-    nodePort: 30088
+    nodePort: 30080
     targetPort: 8080
   selector:
     app.kubernetes.io/name: argocd-server
   type: NodePort
 
 ```
+```
+kubectl apply -f nodeport.yaml
+kubectl get svc
+kubectl describe svc argo-nodeport
+```
+
+
 ## 2.2. Option 2. Port-forward (local cluster)
 ```vim
 kubectl -n argocd port-forward $(kubectl -n argocd get pod -l app.kubernetes.io/name=argocd-server -o jsonpath='{.items[0].metadata.name}') 8080:8080
@@ -66,7 +74,7 @@ brew install argocd
 
 ## 3.2. cli login
 ```vim
-argocd login <IP>:30088  --insecure --grpc-web --username admin --password <ADMIN_PASSWORD>
+argocd login <IP>:30080  --insecure --grpc-web --username admin --password <ADMIN_PASSWORD>
 
 
 # Opcion port forward
