--- a/01.Github.md
+++ b/01.Github.md
@@ -20,7 +20,7 @@ cat ~/.ssh/id_rsa.pub
 ## 1.2. Agregar la llave PÚBLICA a la cuenta Github
 - Cuenta - Settings - SSH and GPG Keys
 
-## 1.3. Crear repositorio privado: Dev
+## 1.3. Crear repositorio privado con el nombre: Dev
 ## 1.4. Agregar el repositorio al entorno local
 ```vim
 cd ~
@@ -37,7 +37,7 @@ git push -u origin main
 ```
 
 ## 1.5. Git branch
-El repositorio de aplicacion requiere dos Branches: Stage y Main (Producción)
+El repositorio de aplicación requiere dos Branches: Stage y Main (Producción)
 
 - stage
 - main= production
@@ -59,16 +59,6 @@ git add .
 git commit -m 'starting code'
 git push origin stage
 ```
-
-# 3. Install Docker
-> [docker](https://docs.docker.com/engine/install/ubuntu/)
-```vim
-curl -fsSL https://get.docker.com -o get-docker.sh
-sudo sh get-docker.sh
-sudo usermod -aG docker $USER
-newgrp docker
-```
-
 
 # 4. DockerHub
 ## 4.1. Create Account
