--- a/02.KubernetesCluster.md
+++ b/02.KubernetesCluster.md
@@ -1,17 +1,14 @@
 
 # 02 Install Kubernetes Cluster <!-- omit in toc -->
 
-
-# 1. Minikube
-```vim
-sudo apt update
-curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
-sudo install minikube-linux-amd64 /usr/local/bin/minikube
-minikube start
-```
-
 ![Cluster](./assets/img/cluster.jpeg)
 
-# 2. Otras Opciones:
-## 2.1. [GKE](./GKE.md)
-## 2.2. [EKS](./EKS.md)
+# 1. Kind
+
+# 2. MicroK8s
+
+# 3. Minikube
+
+# 4. Otras Opciones:
+## 4.1. [GKE](./GKE.md)
+## 4.2. [EKS](./EKS.md)
