--- a/06.ArgoCD.md
+++ b/06.ArgoCD.md
@@ -3,7 +3,7 @@
 Se encarga de escuchar al repositorio OPS, que tiene los archivos YAML de kubernetes
 Cuando encuentra un cambio en la configuración, aplica esos cambios en el cluster.
 
-# 1. Install ArgoCD
+# 1. Instalar ArgoCD
 >[Install](https://argo-cd.readthedocs.io/en/stable/operator-manual/installation/)
 
 ```vim
@@ -16,11 +16,11 @@ kubectl config set-context --current --namespace=argocd
 watch kubectl get pods
 
 ```
-# Optional: HA (production)
+# Opcional: HA (production)
 > [link](https://argo-cd.readthedocs.io/en/stable/operator-manual/installation/#high-availability)
 
 # 2. UI Access
-## 2.1. Option 1. NodePort
+## 2.1. Opcion 1. NodePort
 file: nodeport.yaml
 ```yaml
 apiVersion: v1
@@ -46,13 +46,13 @@ kubectl describe svc argo-nodeport
 ```
 
 
-## 2.2. Option 2. Port-forward (local cluster)
+## 2.2. Opcion 2. Port-forward (local cluster)
 ```vim
 kubectl -n argocd port-forward $(kubectl -n argocd get pod -l app.kubernetes.io/name=argocd-server -o jsonpath='{.items[0].metadata.name}') 8080:8080
 
 ```
 
-# 3. Get Admin secret password and login admin user
+# 3. Generar el Admin password
 ```vim
 kubectl -n argocd get secret argocd-initial-admin-secret -o jsonpath="{.data.password}" | base64 -d && echo
 
@@ -74,7 +74,7 @@ brew install argocd
 
 ## 3.2. cli login
 ```vim
-argocd login <IP>:30080  --insecure --grpc-web --username admin --password <ADMIN_PASSWORD>
+argocd login <DOMINIO>:30080  --insecure --grpc-web --username admin --password <ADMIN_PASSWORD>
 
 
 # Opcion port forward
@@ -97,8 +97,8 @@ argocd app list
 
 
 # 5. Create Application
-> [sync options](https://argo-cd.readthedocs.io/en/stable/user-guide/sync-options/)
-## 5.1. Option 1: UI
+> [sync Opcions](https://argo-cd.readthedocs.io/en/stable/user-guide/sync-Opcions/)
+## 5.1. Opcion 1: UI
 - Applications - Create Application
 - Name: stage-public-api
 - sync automated,
@@ -167,7 +167,7 @@ argocd app get <APP_NAME>
 argocd app history <APP_NAME>
 argocd app delete <APP_NAME>
 
-argocd app create <OPTIONS>
+argocd app create <OpcionS>
 
 EJ:
 argocd app create kustomize-gitops-example \
@@ -177,7 +177,7 @@ argocd app create kustomize-gitops-example \
 ```
 > FATA[0001] Argo CD server address unspecified
 
-# 6. Optional. App of Apps pattern
+# 6. Opcional. App of Apps pattern
 > [public-api YAML](./assets/apps-files/../argo/apps/stage-public-api.yaml)
 - new folder in OPS repo: /argo-apps
 
@@ -203,11 +203,11 @@ argocd app create kustomize-gitops-example \
 - check kubernetes resources
 
 
-# 7. Optional. Expose Argo via Ingress
+# 7. Opcional. Expose Argo via Ingress
 > [yaml](./assets/argo/ingress.yaml)
 > [GKE load balancer](https://argo-cd.readthedocs.io/en/latest/operator-manual/ingress/#google-cloud-load-balancers-with-kubernetes-ingress)
 
-# 8. Optional. Administration
+# 8. Opcional. Administration
 ## 8.1. Users
 > [user management](https://argo-cd.readthedocs.io/en/stable/operator-manual/user-management/)
 > [rbac](https://argo-cd.readthedocs.io/en/stable/operator-manual/rbac/)
