--- a/10.Fulllab.md
+++ b/10.Fulllab.md
@@ -2,5 +2,5 @@
 > [yamls demo](./assets/apps-files/../FullLab)
 
 
-# 1. Create version 5.0.0 in Stage branch
-# 2. Create version 5.0.0 in Production branch
+# 1. Crear la  version 5.0.0 en Stage branch
+# 2. Crear la  version 5.0.0 en Production branch
