fixes ops + kustomize

--- a/04.Kustomize.md
+++ b/04.Kustomize.md
@@ -137,20 +137,21 @@ kubectl create secret generic regcred \
 ## 4.9. Completar el STAGE kustomization.yaml con el siguiente contenido:
 > [kustomization](./assets/kustomize/public-api/overlays/stage/kustomization.yaml)
 
+# 5. Eliminar el deployment existente.
 
-# 5. Build
+# 6. Build
 Construye los recursos Kubernetes de acuerdo al ambiente:
 Este comando genera un archivo yaml para verificar la configuración
 ```vim
 kustomize build overlays/stage > build-stage.yaml
 ```
-# 6. Apply
+# 7. Apply
 Aplica la configuración Kustomize en el Cluster.
 ```vim
 kubectl apply -k overlays/stage
 ```
 
-# 7. Check
+# 8. Check
 ```vim
 curl  http://api-stage.<DOMAIN>/random_crash
 ```
