--- a/03.Ops.md
+++ b/03.Ops.md
@@ -39,15 +39,17 @@ YAML's de Kubernetes de la aplicación DEMO: public-api
 - cm.yaml
 - deploy.yaml (cambiar: image name and version)
 
-### 1.2.4. Crear ns public-stage y config map
+### 1.2.4. moverse al ns public-stage
+```
+kubectl config set-context --current --namespace=public-stage
+```
+
+### 1.2.5. Crear ns public-stage y config map
 ```
 kubectl apply -f ns.yaml
 kubectl apply -f cm.yaml
 ```
-### 1.2.5. moverse al ns public-stage
-```
-kubectl config set-context --current --namespace=public-stage
-```
+
 
 ### 1.2.6. Crear el acceso al registry privado:
 
@@ -74,21 +76,18 @@ kubectl get secret regcred
 imagePullSecrets:
 - name: regcred
 ```
-### 1.2.7. Crear y ejecutar el deploy.yaml
-### 1.2.8. Crear y ejecutar el svc.yaml
-> Cambiar el host
+### 1.2.7. Aplicar el deploy.yaml
+### 1.2.8. Crear y aplicar el svc.yaml
+### 1.2.9. Crear y aplicar el ing.yaml
 
-
-### 1.2.9. Crear y ejecutar el ing.yaml
-
-- ingress: (change USERLAB)
+- ingress: (cambiar USERLAB)
 
 ## 1.3. Check deploy, pods, service & ingress
-> check ingress address
 
 ```
 k describe ing public-api
 ```
+> Revisar endpoints
 
 # 2. Browser Test
 > http://api-stage.LABUSER.kubelabs.dev/graphql
