--- a/08.Actions.md
+++ b/08.Actions.md
@@ -209,7 +209,7 @@ Set an build Job Output
 
 ## 6.2. Create deploy key (OPS repo)
 Es necesaria una llave de acceso para la cuenta de OPS
-> Settings - Deploy keys (Write access)
+> Repo Settings - Deploy keys (Write access)
 
 > Public ssh key
 
