docker install  + kind

--- a/01.Github.md
+++ b/01.Github.md
@@ -66,6 +66,13 @@ git push origin stage
 ## 4.2. Login
 > [login](https://docs.docker.com/engine/reference/commandline/login/)
 ```vim
+sudo apt update
+curl -fsSL https://get.docker.com -o get-docker.sh
+sudo sh get-docker.sh
+
+sudo usermod -aG docker $USER
+newgrp docker
+
 docker login
 ```
 
