--- a/02.KubernetesCluster.md
+++ b/02.KubernetesCluster.md
@@ -58,6 +58,16 @@ CoreDNS is running at https://127.0.0.1:41513/api/v1/namespaces/kube-system/serv
 ```
 
 
+# Instalar Ingress Controller
+```
+kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
+
+kubectl wait --namespace ingress-nginx \
+  --for=condition=ready pod \
+  --selector=app.kubernetes.io/component=controller \
+  --timeout=90s
+```
+
 
 # 3. Otras opciones
 ## 3.1. MicroK8s
