--- a/03.Ops.md
+++ b/03.Ops.md
@@ -102,20 +102,7 @@ query {
 
 # 3. Sincronizar los cambios con Github
 
-# 4. Opcional para probar en Minikube
-```vim
-minikube addons list
-
-minikube addons enable ingress
-minikube addons enable ingress-dns
-
-minikube ip
-
-echo "$(minikube ip)  api-stage.<DOMAIN>" | sudo tee -a /etc/hosts
-
-echo "$(minikube ip)  api.<DOMAIN>" | sudo tee -a /etc/hosts
-```
-
+# 4. Opcional
 ## 4.1. Test URL api
 - curl http://api-stage.<DOMAIN>/healthcheck
 - curl http://api-stage.<DOMAIN>/random_crash
